--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,7 @@
 {
   "cleanUrls": true,
   "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
-    }
+    { "source": "/sw.js", "destination": "/sw.js" },
+    { "source": "/((?!.*\\.).*)", "destination": "/index.html" }
   ]
 }
