--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,7 @@
   "cleanUrls": true,
   "rewrites": [
     { "source": "/sw.js", "destination": "/sw.js" },
+    { "source": "/((?!.*\\.).*)", "destination": "/index.html" }
     { "source": "/manifest.webmanifest", "destination": "/manifest.webmanifest" },
 
     { "source": "/_expo/(.*)", "destination": "/_expo/$1" },
